# poplog

./: .gitignore  LICENSE  PrologParser.hs  PrologTypes.hs  README  number.pl  poplog.cabal  prolog.hs  test.pl
src/: Repl.hs
src/Poplog/: Evaluator.hs  Parser.hs  Types.hs
src/examples/: Main.hs  test.pl
