-- The name of the package.
name:                poplog

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            a Predicate-Only proLOG

-- A longer description of the package.
description:         
  Poplog is an implementation of a prolog-style language lacking functions.
  It has numbers, atoms, variables, and predicates, but it has no functions
  as would be needed to evaluate say "X is 5+7."

-- URL for the project homepage or repository.
homepage:            https://github.com/joshrule/poplog

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Josh Rule

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          rule@mit.edu

-- A copyright notice.
-- copyright:           

category:            Language

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  LICENSE, README.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

library
  -- Modules exported by the library.
  exposed-modules: Poplog.Evaluator,
                   Poplog.Types,
                   Poplog.Parser,
                   Repl
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  default-extensions:
  
  -- Other library packages from which modules are imported.
  build-depends: base,
                 mtl              >= 2.2.1,
                 parsec           >= 3.1.5,
                 logict           >= 0.6.0.2,
                 transformers     >= 0.4.1.0
                  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.

  default-language:    Haskell2010